chore: upgrade to Spring Boot 3.5 / Java 21 and fix build issues
- Bump Spring Boot parent to 3.5.11, java.version to 21
- Migrate mysql-connector-java → mysql-connector-j (com.mysql groupId)
- Add Lombok dependency to web-server-sql-injection
- Fix Flyway properties to use spring.flyway.* prefix
- Add Aspose repository exclusion to Aliyun mirror (settings.xml fix documented)
- Modernise Path.of() over Paths.get(), String.formatted() over String.format()
- Refactor FileUploadControllerTest to use @SpringBootTest + TestRestTemplate
- Consolidate XMLController security endpoints (remove duplicate handlers)
- Update CLAUDE.md with testing and module documentation